2007-02-16   Ping Cheng <pingc@wacom.com>
	* Updated install script to deal with broken uname -p 
	* Support pad as core and non-core device
	* Support keystrokes
	* Support 2.6.19 (Magnus Vigerlöf)
	* label 0.7.7-5

2007-02-02   Ping Cheng <pingc@wacom.com>
	* Updated kernel driver to report full out-prox data
	* Updated pad in X driver
	* Fine tuned outbound tracking
	* label 0.7.7-4 

2007-01-29   Ping Cheng <pingc@wacom.com>
	* Added 3 new xsetwacom options
	* Updated wacom_wac.c and wacom.c for Intuos outbound tracking
	* label 0.7.7-3 

2007-01-25   Ping Cheng <pingc@wacom.com>
	* Added support for Thinkpad X60t
	* label 0.7.7-2 for testing

2007-01-22   Ping Cheng <pingc@wacom.com>
	* Incorporated Magnus' patches

2007-01-19   Ping Cheng <pingc@wacom.com>
	* Split wacom.c for 2.6.15
	* Fixed bugs related to multiarea support

2007-01-15   Ping Cheng <pingc@wacom.com>
	* Split wacom.c for 2.6.14
	* Fixed wacom_sys.c in 2.6.11 and 2.6.13
	* Fixed bugs related to multiarea support

2007-01-11   Ping Cheng <pingc@wacom.com>
	* Incorporated patches 1630928, 1630926, and 1614296
	* Updated xidump to ignore uninitialized tools
	* Fixed kfree bug in wacom_sys.c for 2.6.13

2007-01-08   Ping Cheng <pingc@wacom.com>
	* Report raw tablet data in valuators for relative mode
	* Improve relative movement accuracy in general

2007-01-03   Ping Cheng <pingc@wacom.com>
	* Improve relative small movement accuracy
	* Reset pressure for relative in-prox event
	  to fix bug 1562718

2006-12-27   Ping Cheng <pingc@wacom.com>
	* label 0.7.7-1 for testing

2006-12-22   Ping Cheng <pingc@wacom.com>
	* Update install and uninstall scripts for prebuilt
	  X driver and its utility programs
	* Feature request #1519017 and patch #1614296
	* Patch #1606288
	* Updated web scripts

2006-12-11   Ping Cheng <pingc@wacom.com>
	* Split wacom.c under 2.6.13 into 4 files
	* Fixed an ExpressKeys report bug in wcmUSB.c
	* Removed duplicated sync event in wacom_wac.c (Magnus Vigerlöf)
