@@ -1,3 +1,7 @@
+2007-02-20   Ping Cheng <pingc@wacom.com>
+	* Fixed an install typo
+	* Fixed a dual Cintiq TwinView setup in wacom_drv.o 
+
 2007-02-16   Ping Cheng <pingc@wacom.com>
 	* Updated install script to deal with broken uname -p 
 	* Support pad as core and non-core device
